Fixed body base font-size and info view overflow.

--- a/browser/style/core.css
+++ b/browser/style/core.css
@@ -3,6 +3,7 @@ html, body{ height:100%; }
 body {
 	font-family: Tahoma, Helvetica, Arial, Sans-serif;
 	line-height: 1.5em;
+	font-size: 12px;
 	background-color: #e2e2e2;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -68,6 +69,11 @@ table
 	float: right;
 	position: relative;
 	display: none;
+}
+
+#info
+{
+	overflow: auto;
 }
 
 .e_btn
